infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: <Host>
    http:
      paths:
      - pathType: Prefix
        path: "/api/auth/?(.*)"
        backend:
          service:
            name: auth-srv
            port: 
              number: 3000
